<resources>
    <string name="app_name">TeploInspector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="url_site">Введите адрес сервера</string>
    <string name="loginTitle">Логин</string>
    <string name="passwordTitle">Пароль</string>
    <string name="go">Войти</string>
    <string name="title_activity_order">Список заявок</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="title_activity_map">Карта</string>
    <string name="auth_ok">Авторизация пройдена</string>
    <string name="auth_restored">Авторизация восстановлена, повторите последнее действие</string>
    <string name="title_activity_order2">Список заявок</string>
    <string name="menu_orders">Заявки</string>
    <string name="menu_checkups">Объекты обследования</string>
    <string name="title_checkup_fragment">Обследованиe</string>
    <string name="menu_map">Карта</string>
    <string name="order_image_description">Состояние заявки</string>
    <string name="access_token">pk.eyJ1Ijoibmlrb21wIiwiYSI6ImNrNjh3Y2x4dzA4MHczaG8zZnpoM2NwbXoifQ.BD4ONCVZvHrfVf0qIYp3UQ</string>
    <string name="user_location_permission_explanation">бла-бла-бла</string>
    <string name="not_permissions">Разрешения не выданы, приложение может работать неправильно</string>
    <string name="not_internet">Нет подключения к сети</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="server_not_avaliable">Нет подключения. Проверьте логин и пароль</string>
    <string name="textview">Текст вопроса</string>
    <string name="hint_spinner">Выберите значение из списка</string>
    <string name="hint">hint</string>
    <string name="other">Другое</string>
    <string name="enter">Авторизация</string>
    <string name="by_auth">К авторизации</string>
    <string name="saveCheckup">Сохранить</string>
    <string name="notConfirmStep">Подтвердите все шаги чеклиста</string>
    <string name="msgSaveCheckup">Чеклист сохранен</string>
    <string name="msgDataSendOk">Данные отправлены на сервер</string>
    <string name="msgRouteUserSendOk">Маршрут отправлен на сервер</string>
    <string name="msgDataSendError">Ошибка! Данные не переданы на сервер</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Выход</string>
    <string name="send_data">Отправить данные</string>
    <string name="send_data2">Отправить</string>
    <string name="syncdb">Последняя синхронизация данных была %1$s. Повторить синхронизацию?</string>
    <string name="syncdb2">Повторить синхронизацию?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="clear">Очистить</string>
    <string name="bottom_sheet_peek">Добавление нового объекта обследования</string>
    <string name="kindorder_hint">Выберите вид объекта</string>
    <string name="select_here">Выберите тип объекта</string>
    <string name="object_name">Название объекта</string>
    <string name="btnSave">Сохранить</string>
    <string name="notInet">Проблемы с сетью либо сервер недоступен. Хотите работать в режиме офлайн?</string>
    <string name="btmSheetSaveInvalid">Заполните все данные об объекте</string>
    <string name="unknown_requestCode">Неизвестный requestCode</string>
    <string name="not_result_checklist">Нет заполненных чеклистов</string>
    <string name="not_dir_with_photo">Папка с фото отсутствует</string>
    <string name="not_checked_control">Есть неподтвержденные шаги чеклиста</string>
    <string name="btnAddPhoto">Добавить фото</string>
    <string name="msgNotDataForSync">Нет данных для передачи на сервер</string>
    <string name="btnAddCoordinates">Указать координаты</string>
    <string name="btnAddCheckup">Добавить</string>
    <string name="btnDeleteCheckup">Удалить</string>
    <string name="not_coordinates">Координаты не заданы</string>
    <string name="grout_empty">Группа не заполнена</string>
    <string name="not_coordinates_error">Нужно задать координаты</string>
    <string name="coordinates">Широта: %1$f, Долгота: %2$f</string>
    <string name="photoResult">Фото сохранено в папке %1$s</string>
    <string name="not_photo">Нет фотографий</string>
    <string name="scan_qr">Сканировать QR код</string>
    <string name="not_checkup">Ошибка. Нет такого чеклиста</string>
    <string name="driveway">Проезд</string>
    <string name="btnDeleteAllPhoto">Удалить все</string>
    <string name="btnDeletePhoto">Удалить фото</string>
    <string name="working_offline">Работа продолжена в оффлайн режиме</string>
    <string name="network_error_message">Яндекс.Карты: Ошибка сети</string>
    <string name="remote_error_message">Яндекс.Карты: Ошибка удаленного сервера</string>
    <string name="unknown_error_message">Яндекс.Карты: Неизвестная ошибка</string>
    <string name="routeName">Маршрут %1$s</string>
    <string name="transfersCount">Пересадок %1$s</string>
    <string name="walkingDistance">Пешком %1$s</string>
    <string name="icon_walker">иконка пешехода</string>
    <string name="icon_next">следующая секция</string>
    <string name="order_refresh">Список заявок обновлен</string>
    <string name="isCheckupWithResult">Есть чеклисты с неподтвержденными шагами</string>
    <string name="btnListTitle">Список</string>
    <string name="btnMapTitle">На карте</string>
    <string name="search">Поиск</string>
    <string name="filter">Фильтр</string>
    <string name="filterDate">Фильтр по дате</string>
    <string name="filterStatus">Фильтр по статусу</string>
    <string name="distance">Маршрут %1$s км</string>
    <string name="time_without_traffic">без пробок %1$s</string>
    <string name="no_contact">Нет контактов</string>
    <string name="route">Маршрут</string>
    <string name="orderType1">Регламентные работы</string>
    <string name="orderType2">Приборы учета</string>
    <string name="orderType3">Качество услуг</string>
    <string name="orderType4">Другое</string>
    <string name="search_by_address">Поиск по адресу</string>
    <string name="strTypeTransportation">Тип транспортировки</string>
    <string name="strTypeTransportationDefault">Самостоятельно на общественном транспорте</string>
    <string name="strTypeTransportationClient">Транспортировка выполняется заказчиком</string>
    <string name="strContractNumber">Номер договора</string>
    <string name="data_and_files_sends">Данные и файлы отправлены</string>
    <string name="status_CANCEL">Отменена</string>
    <string name="status_TESTED">Проверена</string>
    <string name="status_DONE">Выполнена</string>
    <string name="status_PAUSED">Приостановлена</string>
    <string name="status_IN_WAY">В пути</string>
    <string name="status_IN_WORK">В работе</string>
    <string name="status_OPEN">Открыта</string>
    <string name="status_Empty">Нет</string>
    <string name="checklist_is_empty">Чеклист пуст</string>
    <string name="th_is_empty">Нет технических характеристик</string>
    <string name="al_is_empty">Нет доп. нагрузок</string>
    <string name="checklist_not_loaded">Чеклист не загружен</string>
    <string name="checklist_not_changed">Отредактируйте чеклист перед сохранением</string>
    <string name="checklist_not_changed_status">Отредактируйте и сохраните чеклист</string>
    <string name="not_date_visit">Нет даты визита</string>
    <string name="not_count_node">Не указано количество узлов</string>
    <string name="unauthorized">Связь с сервером потеряна, повторите авторизацию</string>
    <string name="no_address_hostname">Нет связи с Интернет</string>
    <string name="checklist_is_blocked">Чек-лист заблокирован. Смените статус заявки на \"В работе\"</string>
    <string name="points_less_than_2">Недостаточно точек для построения маршрута. Проверьте GPS</string>
    <string name="tooltip_change_state">Смените статус на \"В работе\"</string>
    <string name="order_fragment_className">ru.bingosoft.teploInspector.ui.order.OrderFragment</string>
    <string name="checkup_fragment_className">ru.bingosoft.teploInspector.ui.checkup.CheckupFragment</string>
    <string name="map_fragment_className">ru.bingosoft.teploInspector.ui.map.MapFragment</string>
    <string name="double_back">Нажмите еще раз для выхода</string>
    <string name="filter_date_all">Все</string>
    <string name="filter_date_today">Сегодня</string>
    <string name="filter_date_tomorrow">Завтра</string>
    <string name="filter_date_date">Конкретное число</string>
    <string name="rugged_description">Неровности на дороге</string>
    <string name="error_date">Требуемый формат даты дд.мм.гггг</string>
    <string name="error_checklist_contains">Сохранение невозможно. Чеклист содержит ошибки</string>
    <string name="btn_is_bloking_yet">Что-то пошло не так при отправке данных</string>
    <string name="error_unable_upload_checklist">Невозможно загрузить чеклист</string>
    <string name="filter_status_all">Все</string>
    <string name="filter_status_without_Done_and_Cancel">Кроме Выполненных и Отмененных</string>
    <string name="filter_status_on_way">В пути</string>
    <string name="filter_status_in_progress">В работе</string>
    <string name="filter_status_open">Открыты</string>
    <string name="enter_with_directory_service">Вход через службу каталогов</string>
    <string name="order_number">№ %1$s</string>
    <string name="count_node">Узлов %1$d</string>
    <string name="count_question_checklist">%1$d/%2$d</string>
    <string name="name_node">Узел %1$d</string>
    <string name="question">%1$s %2$d</string>
    <string name="symbolName">Заявка №%1$s</string>
    <string name="not_gps_permission">Нет разрешений на геолокацию</string>
    <string name="searchByAddress">Поиск по адресу</string>
    <string name="notification_service_title">Запущен сервис уведомлений</string>
    <string name="notification_service_content">Фоновая служба для получения уведомлений</string>
    <string name="location_service_title">Запущен сервис геолокации</string>
    <string name="location_service_content">Фоновая служба для получения координат</string>
    <string name="gps_service_title">Запущен сервис контроля GPS</string>
    <string name="gps_service_content">Фоновая служба для контроля GPS</string>
    <string name="notification_title">Новых уведомлений: %1$d</string>
    <string name="notifications_read">Все уведомления прочитаны</string>
    <string name="regulation_text">%1$s (%2$s)</string>
    <string name="alert_change_date_ok">ОК</string>
    <string name="alert_change_date_date">Дата</string>
    <string name="alert_change_date_time">Время</string>
    <string name="image_description_photo">Фон для фото</string>
    <string name="forward">Вперед</string>
    <string name="back">Назад</string>
    <string name="icon_photo">Иконка фото</string>
    <string name="alert_exit">Вы точно собираетесь выйти?</string>
    <string name="alert_gps_off">Датчик GPS выключен, включить?</string>
    <string name="img_auth_description">К авторизации</string>
    <string name="close_alertdiaolog">Закройте диалог</string>
    <string name="alert_clear_userdata">После обновления приложения необходимо очистить данные старой версии и перезапустить приложение</string>
    <string name="code">Код</string>
    <string name="affiliation">Принадлежность</string>
    <string name="load">Нагрузка</string>
    <string name="contractors">Контрагенты</string>
    <string name="contractor">Контрагент</string>
    <string name="no_requests">Нет заявок</string>
    <string name="default_notification_channel_id" translatable="false">TeploInspectorFCMChennel</string>
</resources>