<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_order_on_map"
            android:title="@string/menu_map" />
    </group>

    <item
        android:orderInCategory="1"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/repeat_sync"
                android:icon="@drawable/ic_send_data"
                android:orderInCategory="1"
                android:title="@string/send_data"/>
        </menu>
    </item>


</menu>
