<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/searchByAddress"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/date_filter"
        android:icon="@drawable/ic_filter_date"
        android:orderInCategory="1"
        android:title="@string/filterDate"
        app:showAsAction="always"/>

    <item
        android:id="@+id/status_filter"
        android:icon="@drawable/ic_filter_state"
        android:orderInCategory="1"
        android:title="@string/filterStatus"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_buttons"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="1"
        android:title="@string/filter"
        app:showAsAction="always"/>

</menu>