<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/filter_dialog_background"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_all" />

        <RadioButton
            android:id="@+id/rbToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_today" />

        <RadioButton
            android:id="@+id/rbTomorrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_tomorrow" />

        <RadioButton
            android:id="@+id/rbDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_date" />

    </RadioGroup>

</LinearLayout>
