<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.bingosoft.mapquestapp2.ui.order.OrderFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.bingosoft.mapquestapp2.ui.checkup.CheckupFragment"
        android:label="@string/menu_checkups"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.bingosoft.mapquestapp2.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

</navigation>