<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/filter_dialog_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cbType1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/chbox_filter_selector"
            android:button="@null"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_order_type1"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/orderType1"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cbType1"
            app:layout_constraintStart_toEndOf="@+id/cbType1" />

        <TextView
            android:id="@+id/countType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="8"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameType1"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cbType2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/chbox_filter_selector"
            android:button="@null"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_order_type2"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/orderType2"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cbType2"
            app:layout_constraintStart_toEndOf="@+id/cbType2" />

        <TextView
            android:id="@+id/countType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="6"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameType2"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cbType3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/chbox_filter_selector"
            android:button="@null"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameType3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_order_type3"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/orderType3"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cbType3"
            app:layout_constraintStart_toEndOf="@+id/cbType3" />

        <TextView
            android:id="@+id/countType3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="7"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameType3"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cbType4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/chbox_filter_selector"
            android:button="@null"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameType4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_order_type4"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/orderType4"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cbType4"
            app:layout_constraintStart_toEndOf="@+id/cbType4" />

        <TextView
            android:id="@+id/countType4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="3"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameType4"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
